--- a/src/index.css
+++ b/src/index.css
@@ -11,36 +11,63 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #1b65af;
+}
+
 .container {
-  max-width: 600px;
-  margin: auto;
-  padding: 0 1rem;
+  width: 400px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-  margin-top: 1rem;
   text-align: center;
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #333;
 }
 
 .top {
-  margin-top: 1rem;
   display: flex;
-  gap: 1rem;
-  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
-input {
+/* input {
   border: none;
   outline: none;
   width: 400px;
   padding: 0.5rem;
   border-bottom: 1px solid #000;
+} */
+
+input[type="text"] {
+  flex-grow: 1;
+  height: 40px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #333;
 }
 
 .add {
-  background-color: #000;
+  display: inline-block;
+  height: 40px;
+  padding: 0 16px;
+  margin-left: 10px;
+  background-color: #4caf50;
   color: #fff;
-  padding: 0.5rem 1.5rem;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
   cursor: pointer;
 }
 
@@ -65,4 +92,13 @@ input {
 .icon {
   cursor: pointer;
   font-size: 20px;
+}
+.list {
+  border-top: 1px solid #ccc;
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+.update {
+  background-color: #fcbf49;
 }
